--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.7</version>
+		<version>2.6.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dio.santader</groupId>
+	
+	<groupId>com.dio.santander</groupId>
 	<artifactId>bankline-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bankline-api</name>
