--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
-
+server.port = 8081
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/BanklineAPI_DB
 spring.datasource.username=postgres
